# rusoto

./: CHANGELOG.md  README.md
.github/workflows/: build.yml
integration_tests/: Cargo.toml
integration_tests/tests/: translate.rs
mock/: Cargo.toml
rusoto/core/: Cargo.toml  README.md
rusoto/credential/: Cargo.toml
rusoto/credential_service_mock/: Cargo.toml
rusoto/services/: publish-services.sh
rusoto/services/accessanalyzer/: Cargo.toml  README.md
rusoto/services/acm/: Cargo.toml  README.md
rusoto/services/acm-pca/: Cargo.toml  README.md
rusoto/services/alexaforbusiness/: Cargo.toml  README.md
rusoto/services/amplify/: Cargo.toml  README.md
rusoto/services/apigateway/: Cargo.toml  README.md
rusoto/services/apigatewaymanagementapi/: Cargo.toml  README.md
rusoto/services/apigatewayv2/: Cargo.toml  README.md
rusoto/services/appconfig/: Cargo.toml  README.md
rusoto/services/application-autoscaling/: Cargo.toml  README.md
rusoto/services/application-insights/: Cargo.toml  README.md
rusoto/services/appmesh/: Cargo.toml  README.md
rusoto/services/appstream/: Cargo.toml  README.md
rusoto/services/appsync/: Cargo.toml  README.md
rusoto/services/athena/: Cargo.toml  README.md
rusoto/services/autoscaling/: Cargo.toml  README.md
rusoto/services/autoscaling-plans/: Cargo.toml  README.md
rusoto/services/backup/: Cargo.toml  README.md
rusoto/services/batch/: Cargo.toml  README.md
rusoto/services/budgets/: Cargo.toml  README.md
rusoto/services/ce/: Cargo.toml  README.md
rusoto/services/chime/: Cargo.toml  README.md
rusoto/services/cloud9/: Cargo.toml  README.md
rusoto/services/clouddirectory/: Cargo.toml  README.md
rusoto/services/cloudformation/: Cargo.toml  README.md
rusoto/services/cloudfront/: Cargo.toml  README.md
rusoto/services/cloudhsm/: Cargo.toml  README.md
rusoto/services/cloudhsmv2/: Cargo.toml  README.md
rusoto/services/cloudsearch/: Cargo.toml  README.md
rusoto/services/cloudsearchdomain/: Cargo.toml  README.md
rusoto/services/cloudtrail/: Cargo.toml  README.md
rusoto/services/cloudwatch/: Cargo.toml  README.md
rusoto/services/codebuild/: Cargo.toml  README.md
rusoto/services/codecommit/: Cargo.toml  README.md
rusoto/services/codedeploy/: Cargo.toml  README.md
rusoto/services/codeguru-reviewer/: Cargo.toml  README.md
rusoto/services/codeguruprofiler/: Cargo.toml  README.md
rusoto/services/codepipeline/: Cargo.toml  README.md
rusoto/services/codestar/: Cargo.toml  README.md
rusoto/services/codestar-connections/: Cargo.toml  README.md
rusoto/services/codestar-notifications/: Cargo.toml  README.md
rusoto/services/cognito-identity/: Cargo.toml  README.md
rusoto/services/cognito-idp/: Cargo.toml  README.md
rusoto/services/cognito-sync/: Cargo.toml  README.md
rusoto/services/comprehend/: Cargo.toml  README.md
rusoto/services/comprehendmedical/: Cargo.toml  README.md
rusoto/services/compute-optimizer/: Cargo.toml  README.md
rusoto/services/config/: Cargo.toml  README.md
rusoto/services/connect/: Cargo.toml  README.md
rusoto/services/connectparticipant/: Cargo.toml  README.md
rusoto/services/cur/: Cargo.toml  README.md
rusoto/services/dataexchange/: Cargo.toml  README.md
rusoto/services/datapipeline/: Cargo.toml  README.md
rusoto/services/datasync/: Cargo.toml  README.md
rusoto/services/dax/: Cargo.toml  README.md
rusoto/services/detective/: Cargo.toml  README.md
rusoto/services/devicefarm/: Cargo.toml  README.md
rusoto/services/directconnect/: Cargo.toml  README.md
rusoto/services/discovery/: Cargo.toml  README.md
rusoto/services/dlm/: Cargo.toml  README.md
rusoto/services/dms/: Cargo.toml  README.md
rusoto/services/docdb/: Cargo.toml  README.md
rusoto/services/ds/: Cargo.toml  README.md
rusoto/services/dynamodb/: Cargo.toml  README.md
rusoto/services/dynamodbstreams/: Cargo.toml  README.md
rusoto/services/ebs/: Cargo.toml  README.md
rusoto/services/ec2/: Cargo.toml  README.md
rusoto/services/ec2-instance-connect/: Cargo.toml  README.md
rusoto/services/ecr/: Cargo.toml  README.md
rusoto/services/ecs/: Cargo.toml  README.md
rusoto/services/efs/: Cargo.toml  README.md
rusoto/services/eks/: Cargo.toml  README.md
rusoto/services/elastic-inference/: Cargo.toml  README.md
rusoto/services/elasticache/: Cargo.toml  README.md
rusoto/services/elasticbeanstalk/: Cargo.toml  README.md
rusoto/services/elastictranscoder/: Cargo.toml  README.md
rusoto/services/elb/: Cargo.toml  README.md
rusoto/services/elbv2/: Cargo.toml  README.md
rusoto/services/emr/: Cargo.toml  README.md
rusoto/services/es/: Cargo.toml  README.md
rusoto/services/events/: Cargo.toml  README.md
rusoto/services/firehose/: Cargo.toml  README.md
rusoto/services/fms/: Cargo.toml  README.md
rusoto/services/forecast/: Cargo.toml  README.md
rusoto/services/forecastquery/: Cargo.toml  README.md
rusoto/services/frauddetector/: Cargo.toml  README.md
rusoto/services/fsx/: Cargo.toml  README.md
rusoto/services/gamelift/: Cargo.toml  README.md
rusoto/services/glacier/: Cargo.toml  README.md
rusoto/services/globalaccelerator/: Cargo.toml  README.md
rusoto/services/glue/: Cargo.toml  README.md
rusoto/services/greengrass/: Cargo.toml  README.md
rusoto/services/groundstation/: Cargo.toml  README.md
rusoto/services/guardduty/: Cargo.toml  README.md
rusoto/services/health/: Cargo.toml  README.md
rusoto/services/iam/: Cargo.toml  README.md
rusoto/services/imagebuilder/: Cargo.toml  README.md
rusoto/services/importexport/: Cargo.toml  README.md
rusoto/services/inspector/: Cargo.toml  README.md
rusoto/services/iot/: Cargo.toml  README.md
rusoto/services/iot-data/: Cargo.toml  README.md
rusoto/services/iot-jobs-data/: Cargo.toml  README.md
rusoto/services/iot1click-devices/: Cargo.toml  README.md
rusoto/services/route53/: Cargo.toml  README.md
rusoto/services/sts/: Cargo.toml  README.md
rusoto/signature/: Cargo.toml
service_crategen/: services.json
service_crategen/src/: cargo.rs  service.rs
skeptical/: Cargo.toml
(+221 files in other folders)
