[package]
name = "rusoto_tests"
description = "AWS SDK for Rust - Integration Tests"
version = "0.45.0"
authors = [
    "Anthony DiMarco <ocramida@gmail.com>",
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Matthew Mayer <matthewkmayer@gmail.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]
license = "MIT"
repository = "https://github.com/rusoto/rusoto"
homepage = "https://www.rusoto.org/"
edition = "2018"

[profile.dev]
codegen-units = 2
debug = false

[profile.test]
codegen-units = 2
debug = false

[dependencies]
mz_rusoto_credential = { path = "../rusoto/credential" }
mz_rusoto_core = { path = "../rusoto/core", default-features = false }

[dependencies.mz_rusoto_acm]
optional = true
path = "../rusoto/services/acm"

[dependencies.mz_rusoto_acm_pca]
optional = true
path = "../rusoto/services/acm-pca"

[dependencies.mz_rusoto_alexaforbusiness]
optional = true
path = "../rusoto/services/alexaforbusiness"

[dependencies.mz_rusoto_apigateway]
optional = true
path = "../rusoto/services/apigateway"

[dependencies.mz_rusoto_application_autoscaling]
optional = true
path = "../rusoto/services/application-autoscaling"

[dependencies.mz_rusoto_appmesh]
optional = true
path = "../rusoto/services/appmesh"

[dependencies.mz_rusoto_appstream]
optional = true
path = "../rusoto/services/appstream"

[dependencies.mz_rusoto_appsync]
optional = true
path = "../rusoto/services/appsync"

[dependencies.mz_rusoto_athena]
optional = true
path = "../rusoto/services/athena"

[dependencies.mz_rusoto_autoscaling]
optional = true
path = "../rusoto/services/autoscaling"

[dependencies.mz_rusoto_autoscaling_plans]
optional = true
path = "../rusoto/services/autoscaling-plans"

[dependencies.mz_rusoto_batch]
optional = true
path = "../rusoto/services/batch"

[dependencies.mz_rusoto_budgets]
optional = true
path = "../rusoto/services/budgets"

[dependencies.mz_rusoto_ce]
optional = true
path = "../rusoto/services/ce"

[dependencies.mz_rusoto_chime]
optional = true
path = "../rusoto/services/chime"

[dependencies.mz_rusoto_cloud9]
optional = true
path = "../rusoto/services/cloud9"

[dependencies.mz_rusoto_clouddirectory]
optional = true
path = "../rusoto/services/clouddirectory"

[dependencies.mz_rusoto_cloudformation]
optional = true
path = "../rusoto/services/cloudformation"

[dependencies.mz_rusoto_cloudfront]
optional = true
path = "../rusoto/services/cloudfront"

[dependencies.mz_rusoto_cloudhsm]
optional = true
path = "../rusoto/services/cloudhsm"

[dependencies.mz_rusoto_cloudhsmv2]
optional = true
path = "../rusoto/services/cloudhsmv2"

[dependencies.mz_rusoto_cloudsearch]
optional = true
path = "../rusoto/services/cloudsearch"

[dependencies.mz_rusoto_cloudsearchdomain]
optional = true
path = "../rusoto/services/cloudsearchdomain"

[dependencies.mz_rusoto_cloudtrail]
optional = true
path = "../rusoto/services/cloudtrail"

[dependencies.mz_rusoto_cloudwatch]
optional = true
path = "../rusoto/services/cloudwatch"

[dependencies.mz_rusoto_codebuild]
optional = true
path = "../rusoto/services/codebuild"

[dependencies.mz_rusoto_codecommit]
optional = true
path = "../rusoto/services/codecommit"

[dependencies.mz_rusoto_codedeploy]
optional = true
path = "../rusoto/services/codedeploy"

[dependencies.mz_rusoto_codepipeline]
optional = true
path = "../rusoto/services/codepipeline"

[dependencies.mz_rusoto_codestar]
optional = true
path = "../rusoto/services/codestar"

[dependencies.mz_rusoto_cognito_identity]
optional = true
path = "../rusoto/services/cognito-identity"

[dependencies.mz_rusoto_cognito_idp]
optional = true
path = "../rusoto/services/cognito-idp"

[dependencies.mz_rusoto_cognito_sync]
optional = true
path = "../rusoto/services/cognito-sync"

[dependencies.mz_rusoto_comprehend]
optional = true
path = "../rusoto/services/comprehend"

[dependencies.mz_rusoto_comprehendmedical]
optional = true
path = "../rusoto/services/comprehendmedical"

[dependencies.mz_rusoto_config]
optional = true
path = "../rusoto/services/config"

[dependencies.mz_rusoto_connect]
optional = true
path = "../rusoto/services/connect"

[dependencies.mz_rusoto_cur]
optional = true
path = "../rusoto/services/cur"

[dependencies.mz_rusoto_datapipeline]
optional = true
path = "../rusoto/services/datapipeline"

[dependencies.mz_rusoto_dax]
optional = true
path = "../rusoto/services/dax"

[dependencies.mz_rusoto_devicefarm]
optional = true
path = "../rusoto/services/devicefarm"

[dependencies.mz_rusoto_directconnect]
optional = true
path = "../rusoto/services/directconnect"

[dependencies.mz_rusoto_discovery]
optional = true
path = "../rusoto/services/discovery"

[dependencies.mz_rusoto_dms]
optional = true
path = "../rusoto/services/dms"

[dependencies.mz_rusoto_docdb]
optional = true
path = "../rusoto/services/docdb"

[dependencies.mz_rusoto_ds]
optional = true
path = "../rusoto/services/ds"

[dependencies.mz_rusoto_dynamodb]
optional = true
path = "../rusoto/services/dynamodb"

[dependencies.mz_rusoto_dynamodbstreams]
optional = true
path = "../rusoto/services/dynamodbstreams"

[dependencies.mz_rusoto_ec2]
optional = true
path = "../rusoto/services/ec2"

[dependencies.mz_rusoto_ec2_instance_connect]
optional = true
path = "../rusoto/services/ec2-instance-connect"

[dependencies.mz_rusoto_ecr]
optional = true
path = "../rusoto/services/ecr"

[dependencies.mz_rusoto_ecs]
optional = true
path = "../rusoto/services/ecs"

[dependencies.mz_rusoto_elasticache]
optional = true
path = "../rusoto/services/elasticache"

[dependencies.mz_rusoto_elasticbeanstalk]
optional = true
path = "../rusoto/services/elasticbeanstalk"

[dependencies.mz_rusoto_efs]
optional = true
path = "../rusoto/services/efs"

[dependencies.mz_rusoto_eks]
optional = true
path = "../rusoto/services/eks"

[dependencies.mz_rusoto_elastictranscoder]
optional = true
path = "../rusoto/services/elastictranscoder"

[dependencies.mz_rusoto_elb]
optional = true
path = "../rusoto/services/elb"

[dependencies.mz_rusoto_elbv2]
optional = true
path = "../rusoto/services/elbv2"

[dependencies.mz_rusoto_emr]
optional = true
path = "../rusoto/services/emr"

[dependencies.mz_rusoto_events]
optional = true
path = "../rusoto/services/events"

[dependencies.mz_rusoto_firehose]
optional = true
path = "../rusoto/services/firehose"

[dependencies.mz_rusoto_fms]
optional = true
path = "../rusoto/services/fms"

[dependencies.mz_rusoto_fsx]
optional = true
path = "../rusoto/services/fsx"

[dependencies.mz_rusoto_gamelift]
optional = true
path = "../rusoto/services/gamelift"

[dependencies.mz_rusoto_glacier]
optional = true
path = "../rusoto/services/glacier"

[dependencies.mz_rusoto_glue]
optional = true
path = "../rusoto/services/glue"

[dependencies.mz_rusoto_greengrass]
optional = true
path = "../rusoto/services/greengrass"

[dependencies.mz_rusoto_guardduty]
optional = true
path = "../rusoto/services/guardduty"

[dependencies.mz_rusoto_iam]
optional = true
path = "../rusoto/services/iam"

[dependencies.mz_rusoto_importexport]
optional = true
path = "../rusoto/services/importexport"

[dependencies.mz_rusoto_inspector]
optional = true
path = "../rusoto/services/inspector"

[dependencies.mz_rusoto_iot]
optional = true
path = "../rusoto/services/iot"

[dependencies.mz_rusoto_iot1click_devices]
optional = true
path = "../rusoto/services/iot1click-devices"

[dependencies.mz_rusoto_iot1click_projects]
optional = true
path = "../rusoto/services/iot1click-projects"

[dependencies.mz_rusoto_iotanalytics]
optional = true
path = "../rusoto/services/iotanalytics"

[dependencies.mz_rusoto_iot_data]
optional = true
path = "../rusoto/services/iot-data"

[dependencies.mz_rusoto_iot_jobs_data]
optional = true
path = "../rusoto/services/iot-jobs-data"

[dependencies.mz_rusoto_iotsecuretunneling]
 optional = true
 path = "../rusoto/services/iotsecuretunneling"

[dependencies.mz_rusoto_kafka]
optional = true
path = "../rusoto/services/kafka"

[dependencies.mz_rusoto_kinesis]
optional = true
path = "../rusoto/services/kinesis"

[dependencies.mz_rusoto_kinesisanalytics]
optional = true
path = "../rusoto/services/kinesisanalytics"

[dependencies.mz_rusoto_kinesisvideo]
optional = true
path = "../rusoto/services/kinesisvideo"

[dependencies.mz_rusoto_kinesis_video_media]
optional = true
path = "../rusoto/services/kinesis-video-media"

[dependencies.mz_rusoto_kinesis_video_archived_media]
optional = true
path = "../rusoto/services/kinesis-video-archived-media"

[dependencies.mz_rusoto_kms]
optional = true
path = "../rusoto/services/kms"

[dependencies.mz_rusoto_lambda]
optional = true
path = "../rusoto/services/lambda"

[dependencies.mz_rusoto_lex_models]
optional = true
path = "../rusoto/services/lex-models"

[dependencies.mz_rusoto_license_manager]
optional = true
path = "../rusoto/services/license-manager"

[dependencies.mz_rusoto_lightsail]
optional = true
path = "../rusoto/services/lightsail"

[dependencies.mz_rusoto_lex_runtime]
optional = true
path = "../rusoto/services/lex-runtime"

[dependencies.mz_rusoto_logs]
optional = true
path = "../rusoto/services/logs"

[dependencies.mz_rusoto_neptune]
optional = true
path = "../rusoto/services/neptune"

[dependencies.mz_rusoto_machinelearning]
optional = true
path = "../rusoto/services/machinelearning"

[dependencies.mz_rusoto_macie]
optional = true
path = "../rusoto/services/macie"

[dependencies.mz_rusoto_marketplacecommerceanalytics]
optional = true
path = "../rusoto/services/marketplacecommerceanalytics"

[dependencies.mz_rusoto_marketplace_entitlement]
optional = true
path = "../rusoto/services/marketplace-entitlement"

[dependencies.mz_rusoto_mediaconvert]
optional = true
path = "../rusoto/services/mediaconvert"

[dependencies.mz_rusoto_medialive]
optional = true
path = "../rusoto/services/medialive"

[dependencies.mz_rusoto_mediapackage]
optional = true
path = "../rusoto/services/mediapackage"

[dependencies.mz_rusoto_mediastore]
optional = true
path = "../rusoto/services/mediastore"

[dependencies.mz_rusoto_mediatailor]
optional = true
path = "../rusoto/services/mediatailor"

[dependencies.mz_rusoto_mgh]
optional = true
path = "../rusoto/services/mgh"

[dependencies.mz_rusoto_mobile]
optional = true
path = "../rusoto/services/mobile"

[dependencies.mz_rusoto_mq]
optional = true
path = "../rusoto/services/mq"

[dependencies.mz_rusoto_mturk]
optional = true
path = "../rusoto/services/mturk"

[dependencies.mz_rusoto_opsworks]
optional = true
path = "../rusoto/services/opsworks"

[dependencies.mz_rusoto_opsworkscm]
optional = true
path = "../rusoto/services/opsworkscm"

[dependencies.mz_rusoto_organizations]
optional = true
path = "../rusoto/services/organizations"

[dependencies.mz_rusoto_pi]
optional = true
path = "../rusoto/services/pi"

[dependencies.mz_rusoto_polly]
optional = true
path = "../rusoto/services/polly"

[dependencies.mz_rusoto_pricing]
optional = true
path = "../rusoto/services/pricing"

[dependencies.mz_rusoto_redshift]
optional = true
path = "../rusoto/services/redshift"

[dependencies.mz_rusoto_rekognition]
optional = true
path = "../rusoto/services/rekognition"

[dependencies.mz_rusoto_resource_groups]
optional = true
path = "../rusoto/services/resource-groups"

[dependencies.mz_rusoto_resourcegroupstaggingapi]
optional = true
path = "../rusoto/services/resourcegroupstaggingapi"

[dependencies.mz_rusoto_rds]
optional = true
path = "../rusoto/services/rds"

[dependencies.mz_rusoto_rds_data]
optional = true
path = "../rusoto/services/rds-data"

[dependencies.mz_rusoto_route53]
optional = true
path = "../rusoto/services/route53"

[dependencies.mz_rusoto_route53domains]
optional = true
path = "../rusoto/services/route53domains"

[dependencies.mz_rusoto_s3]
optional = true
path = "../rusoto/services/s3"

[dependencies.mz_rusoto_sagemaker]
optional = true
path = "../rusoto/services/sagemaker"

[dependencies.mz_rusoto_sagemaker_runtime]
optional = true
path = "../rusoto/services/sagemaker-runtime"

[dependencies.mz_rusoto_sdb]
optional = true
path = "../rusoto/services/sdb"

[dependencies.mz_rusoto_secretsmanager]
optional = true
path = "../rusoto/services/secretsmanager"

[dependencies.mz_rusoto_securityhub]
optional = true
path = "../rusoto/services/securityhub"

[dependencies.mz_rusoto_serverlessrepo]
optional = true
path = "../rusoto/services/serverlessrepo"

[dependencies.mz_rusoto_servicecatalog]
optional = true
path = "../rusoto/services/servicecatalog"

[dependencies.mz_rusoto_servicediscovery]
optional = true
path = "../rusoto/services/servicediscovery"

[dependencies.mz_rusoto_ses]
optional = true
path = "../rusoto/services/ses"

[dependencies.mz_rusoto_shield]
optional = true
path = "../rusoto/services/shield"

[dependencies.mz_rusoto_sms]
optional = true
path = "../rusoto/services/sms"

[dependencies.mz_rusoto_snowball]
optional = true
path = "../rusoto/services/snowball"

[dependencies.mz_rusoto_sns]
optional = true
path = "../rusoto/services/sns"

[dependencies.mz_rusoto_sqs]
optional = true
path = "../rusoto/services/sqs"

[dependencies.mz_rusoto_ssm]
optional = true
path = "../rusoto/services/ssm"

[dependencies.mz_rusoto_stepfunctions]
optional = true
path = "../rusoto/services/stepfunctions"

[dependencies.mz_rusoto_storagegateway]
optional = true
path = "../rusoto/services/storagegateway"

[dependencies.mz_rusoto_sts]
optional = true
path = "../rusoto/services/sts"

[dependencies.mz_rusoto_support]
optional = true
path = "../rusoto/services/support"

[dependencies.mz_rusoto_swf]
optional = true
path = "../rusoto/services/swf"

[dependencies.mz_rusoto_transcribe]
optional = true
path = "../rusoto/services/transcribe"

[dependencies.mz_rusoto_transfer]
optional = true
path = "../rusoto/services/transfer"

[dependencies.mz_rusoto_translate]
optional = true
path = "../rusoto/services/translate"

[dependencies.mz_rusoto_waf]
optional = true
path = "../rusoto/services/waf"

[dependencies.mz_rusoto_waf_regional]
optional = true
path = "../rusoto/services/waf-regional"

[dependencies.mz_rusoto_workdocs]
optional = true
path = "../rusoto/services/workdocs"

[dependencies.mz_rusoto_worklink]
optional = true
path = "../rusoto/services/worklink"

[dependencies.mz_rusoto_workmail]
optional = true
path = "../rusoto/services/workmail"

[dependencies.mz_rusoto_workspaces]
optional = true
path = "../rusoto/services/workspaces"

[dependencies.mz_rusoto_xray]
optional = true
path = "../rusoto/services/xray"

[dependencies.mz_rusoto_amplify]
optional = true
path = "../rusoto/services/amplify"

[dependencies.mz_rusoto_apigatewaymanagementapi]
optional = true
path = "../rusoto/services/apigatewaymanagementapi"

[dependencies.mz_rusoto_apigatewayv2]
optional = true
path = "../rusoto/services/apigatewayv2"

[dependencies.mz_rusoto_qldb]
optional = true
path = "../rusoto/services/qldb"

[dependencies.mz_rusoto_ram]
optional = true
path = "../rusoto/services/ram"

[dev-dependencies]
async-trait = "0.1.31"
env_logger = "0.7"
bytes = "0.5"
futures = "0.3"
log = "0.4"
rand = "0.7"
time = "0.2"
reqwest = { version = "0.10", features = ["json"] }
http = "0.2"
tokio = { version = "0.2", features = ["time", "rt-core", "fs"] }
chrono = "0.4.10"

[features]
all = [
	"core",
	"acm",
	"acm-pca",
	"alexaforbusiness",
	"apigateway",
	"application-autoscaling",
	"appmesh",
	"appstream",
	"appsync",
	"athena",
	"autoscaling",
	"autoscaling-plans",
	"batch",
	"budgets",
	"ce",
	"cloud9",
	"chime",
	"clouddirectory",
	"cloudformation",
	"cloudfront",
	"cloudhsm",
	"cloudhsmv2",
	"cloudsearch",
	"cloudsearchdomain",
	"cloudtrail",
	"cloudwatch",
	"codebuild",
	"codecommit",
	"codedeploy",
	"codepipeline",
	"codestar",
	"cognito-identity",
	"cognito-idp",
	"cognito-sync",
	"comprehend",
	"comprehendmedical",
	"config",
	"connect",
	"cur",
	"datapipeline",
	"dax",
	"devicefarm",
	"directconnect",
	"discovery",
	"dms",
	"docdb",
	"ds",
	"dynamodb",
	"dynamodbstreams",
	"ec2",
	"ec2-instance-connect",
	"ecr",
	"ecs",
	"elasticache",
	"elasticbeanstalk",
	"efs",
	"eks",
	"elastictranscoder",
	"elb",
	"elbv2",
	"emr",
	"events",
	"firehose",
	"fms",
	"fsx",
	"gamelift",
	"glacier",
	"glue",
	"greengrass",
	"guardduty",
	"iam",
	"importexport",
	"inspector",
	"iot",
	"iotanalytics",
	"iotdata",
	"iotsecuretunneling",
	"iot1clickdevices",
	"iot1clickprojects",
	"kafka",
	"kinesis",
	"kinesisanalytics",
	"kinesisvideo",
	"kinesisvideomedia",
	"kinesisvideoarchivedmedia",
	"kms",
	"lambda",
	"lex-models",
	"license-manager",
	"lightsail",
	"lex-runtime",
	"logs",
	"neptune",
	"machinelearning",
	"macie",
	"marketplacecommerceanalytics",
	"marketplace-entitlement",
	"mediaconvert",
	"medialive",
	"mediapackage",
	"mediastore",
	"mediatailor",
	"mgh",
	"mobile",
	"mq",
	"mturk",
	"opsworks",
	"opsworkscm",
	"organizations",
	"pi",
	"polly",
	"pricing",
	"redshift",
	"rekognition",
	"resource-groups",
	"resourcegroupstaggingapi",
	"rds",
	"rds-data",
	"route53",
	"route53domains",
	"s3",
	"sagemaker",
	"sagemaker-runtime",
	"sdb",
	"secretsmanager",
	"securityhub",
	"serverlessrepo",
	"servicecatalog",
	"servicediscovery",
	"ses",
	"shield",
	"sms",
	"snowball",
	"sns",
	"sqs",
	"ssm",
	"stepfunctions",
	"storagegateway",
	"sts",
	"support",
	"swf",
	"transcribe",
	"transfer",
	"translate",
	"waf",
	"waf-regional",
	"workdocs",
	"worklink",
	"workmail",
	"workspaces",
	"xray",
	"amplify",
	"apigatewaymanagementapi",
	"apigatewayv2",
	"ram",
	"qldb"
	]
core = []
acm = ["mz_rusoto_acm"]
acm-pca = ["mz_rusoto_acm_pca"]
alexaforbusiness = ["mz_rusoto_alexaforbusiness"]
apigateway = ["mz_rusoto_apigateway"]
application-autoscaling = ["mz_rusoto_application_autoscaling"]
appmesh = ["mz_rusoto_appmesh"]
appstream = ["mz_rusoto_appstream"]
appsync = ["mz_rusoto_appsync"]
athena = ["mz_rusoto_athena"]
autoscaling = ["mz_rusoto_autoscaling"]
autoscaling-plans = ["mz_rusoto_autoscaling_plans"]
batch = ["mz_rusoto_batch"]
budgets = ["mz_rusoto_budgets"]
ce = ["mz_rusoto_ce"]
chime = ["mz_rusoto_chime"]
cloud9 = ["mz_rusoto_cloud9"]
clouddirectory = ["mz_rusoto_clouddirectory"]
cloudformation = ["mz_rusoto_cloudformation"]
cloudfront = ["mz_rusoto_cloudfront"]
cloudhsm = ["mz_rusoto_cloudhsm"]
cloudhsmv2 = ["mz_rusoto_cloudhsmv2"]
cloudsearch = ["mz_rusoto_cloudsearch"]
cloudsearchdomain = ["mz_rusoto_cloudsearchdomain"]
cloudtrail = ["mz_rusoto_cloudtrail"]
cloudwatch = ["mz_rusoto_cloudwatch"]
codebuild = ["mz_rusoto_codebuild"]
codecommit = ["mz_rusoto_codecommit"]
codedeploy = ["mz_rusoto_codedeploy"]
codepipeline = ["mz_rusoto_codepipeline"]
codestar = ["mz_rusoto_codestar"]
cognito-identity = ["mz_rusoto_cognito_identity", "mz_rusoto_iam"]
cognito-idp = ["mz_rusoto_cognito_idp"]
cognito-sync = ["mz_rusoto_cognito_sync"]
comprehend = ["mz_rusoto_comprehend"]
comprehendmedical = ["mz_rusoto_comprehendmedical"]
config = ["mz_rusoto_config"]
connect = ["mz_rusoto_connect"]
cur = ["mz_rusoto_cur"]
datapipeline = ["mz_rusoto_datapipeline"]
dax = ["mz_rusoto_dax"]
devicefarm = ["mz_rusoto_devicefarm"]
directconnect = ["mz_rusoto_directconnect"]
discovery = ["mz_rusoto_discovery"]
dms = ["mz_rusoto_dms"]
docdb = ["mz_rusoto_docdb"]
ds = ["mz_rusoto_ds"]
dynamodb = ["mz_rusoto_dynamodb"]
dynamodbstreams = ["mz_rusoto_dynamodbstreams"]
ec2 = ["mz_rusoto_ec2"]
ec2-instance-connect = ["mz_rusoto_ec2_instance_connect"]
ecr = ["mz_rusoto_ecr"]
ecs = ["mz_rusoto_ecs"]
elasticache = ["mz_rusoto_elasticache"]
elasticbeanstalk = ["mz_rusoto_elasticbeanstalk"]
efs = ["mz_rusoto_efs"]
eks = ["mz_rusoto_eks"]
elastictranscoder = ["mz_rusoto_elastictranscoder"]
elb = ["mz_rusoto_elb"]
elbv2 = ["mz_rusoto_elbv2"]
emr = ["mz_rusoto_emr"]
events = ["mz_rusoto_events"]
firehose = ["mz_rusoto_firehose"]
fms = ["mz_rusoto_fms"]
fsx = ["mz_rusoto_fsx"]
gamelift = ["mz_rusoto_gamelift"]
glacier = ["mz_rusoto_glacier"]
glue = ["mz_rusoto_glue"]
greengrass = ["mz_rusoto_greengrass"]
guardduty = ["mz_rusoto_guardduty"]
iam = ["mz_rusoto_iam"]
importexport = ["mz_rusoto_importexport"]
inspector = ["mz_rusoto_inspector"]
iot = ["mz_rusoto_iot"]
iotanalytics = ["mz_rusoto_iotanalytics"]
iotdata = ["mz_rusoto_iot_data"]
iotjobsdata = ["mz_rusoto_iot_jobs_data"]
iotsecuretunneling = ["mz_rusoto_iotsecuretunneling"]
iot1clickdevices = ["mz_rusoto_iot1click_devices"]
iot1clickprojects = ["mz_rusoto_iot1click_projects"]
kafka = ["mz_rusoto_kafka"]
kinesis = ["mz_rusoto_kinesis"]
kinesisanalytics = ["mz_rusoto_kinesisanalytics"]
kinesisvideo = ["mz_rusoto_kinesisvideo"]
kinesisvideomedia = ["mz_rusoto_kinesis_video_media"]
kinesisvideoarchivedmedia = ["mz_rusoto_kinesis_video_archived_media"]
kms = ["mz_rusoto_kms"]
lambda = ["mz_rusoto_lambda"]
license-manager = ["mz_rusoto_license_manager"]
lightsail = ["mz_rusoto_lightsail"]
lex-models = ["mz_rusoto_lex_models"]
lex-runtime = ["mz_rusoto_lex_runtime"]
logs = ["mz_rusoto_logs", "mz_rusoto_core/encoding"]
neptune = ["mz_rusoto_neptune"]
machinelearning = ["mz_rusoto_machinelearning"]
macie = ["mz_rusoto_macie"]
marketplacecommerceanalytics = ["mz_rusoto_marketplacecommerceanalytics"]
marketplace-entitlement = ["mz_rusoto_marketplace_entitlement"]
mediaconvert = ["mz_rusoto_mediaconvert"]
medialive = ["mz_rusoto_medialive"]
mediapackage = ["mz_rusoto_mediapackage"]
mediastore = ["mz_rusoto_mediastore"]
mediatailor = ["mz_rusoto_mediatailor"]
mgh = ["mz_rusoto_mgh"]
mobile = ["mz_rusoto_mobile"]
mq = ["mz_rusoto_mq"]
mturk = ["mz_rusoto_mturk"]
opsworks = ["mz_rusoto_opsworks"]
opsworkscm = ["mz_rusoto_opsworkscm"]
organizations = ["mz_rusoto_organizations"]
pi = ["mz_rusoto_pi"]
polly = ["mz_rusoto_polly"]
pricing = ["mz_rusoto_pricing"]
redshift = ["mz_rusoto_redshift"]
rekognition = ["mz_rusoto_rekognition"]
resource-groups = ["mz_rusoto_resource_groups"]
resourcegroupstaggingapi = ["mz_rusoto_resourcegroupstaggingapi"]
rds = ["mz_rusoto_rds"]
rds-data = ["mz_rusoto_rds_data"]
route53 = ["mz_rusoto_route53"]
route53domains = ["mz_rusoto_route53domains"]
s3 = ["mz_rusoto_s3"]
sagemaker = ["mz_rusoto_sagemaker"]
sagemaker-runtime = ["mz_rusoto_sagemaker_runtime"]
sdb = ["mz_rusoto_sdb"]
secretsmanager = ["mz_rusoto_secretsmanager"]
securityhub = ["mz_rusoto_securityhub"]
serverlessrepo = ["mz_rusoto_serverlessrepo"]
servicecatalog = ["mz_rusoto_servicecatalog"]
servicediscovery = ["mz_rusoto_servicediscovery"]
shield = ["mz_rusoto_shield"]
ses = ["mz_rusoto_ses"]
sms = ["mz_rusoto_sms"]
snowball = ["mz_rusoto_snowball"]
sns = ["mz_rusoto_sns"]
sqs = ["mz_rusoto_sqs"]
ssm = ["mz_rusoto_ssm"]
stepfunctions = ["mz_rusoto_stepfunctions"]
storagegateway = ["mz_rusoto_storagegateway"]
sts = ["mz_rusoto_sts", "mz_rusoto_ec2"]
support = ["mz_rusoto_support"]
swf = ["mz_rusoto_swf"]
transcribe = ["mz_rusoto_transcribe"]
transfer = ["mz_rusoto_transfer"]
translate = ["mz_rusoto_translate"]
waf = ["mz_rusoto_waf"]
waf-regional = ["mz_rusoto_waf_regional"]
workmail = ["mz_rusoto_workmail"]
workspaces = ["mz_rusoto_workspaces"]
workdocs = ["mz_rusoto_workdocs"]
worklink = ["mz_rusoto_worklink"]
xray = ["mz_rusoto_xray"]
amplify = ["mz_rusoto_amplify"]
apigatewaymanagementapi = ["mz_rusoto_apigatewaymanagementapi"]
apigatewayv2 = ["mz_rusoto_apigatewayv2"]
ram = ["mz_rusoto_ram"]
qldb = ["mz_rusoto_qldb"]
nightly-testing = ["mz_rusoto_core/nightly-testing"]
disable_ceph_unsupported = []
disable_minio_unsupported = []
default = ["native-tls"]
native-tls = ["mz_rusoto_core/native-tls"]
rustls = ["mz_rusoto_core/rustls"]
