[package]
authors = ["Anthony DiMarco <ocramida@gmail.com>", "Jimmy Cuadra <jimmy@jimmycuadra.com>", "Matthew Mayer <matthewkmayer@gmail.com>", "Nikita Pekin <contact@nikitapek.in>"]
description = "AWS SDK for Rust - AWS Directory Service @ 2015-04-16"
documentation = "https://docs.rs/mz_rusoto_ds"
keywords = ["AWS", "Amazon", "ds"]
license = "MIT"
name = "mz_rusoto_ds"
readme = "README.md"
repository = "https://github.com/MaterializeInc/rusoto"
version = "0.46.0"
edition = "2018"
exclude = ["test_resources/*"]
[package.metadata.docs.rs]
targets = []

[build-dependencies]

[dependencies]
async-trait = "0.1"
bytes = "0.5"
serde_json = "1.0"

[dependencies.futures]
version = "0.3"

[dependencies.mz_rusoto_core]
version = "0.46.0"
path = "../../core"
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
tokio = "0.2"

[dev-dependencies.mz_rusoto_mock]
version = "0.46.0"
path = "../../../mock"
default-features = false

[features]
default = ["native-tls"]
deserialize_structs = ["bytes/serde"]
native-tls = ["mz_rusoto_core/native-tls"]
rustls = ["mz_rusoto_core/rustls"]
serialize_structs = ["bytes/serde"]

[lib]
name = "rusoto_ds"
