[package]
authors = ["Anthony DiMarco <ocramida@gmail.com>", "Jimmy Cuadra <jimmy@jimmycuadra.com>", "Matthew Mayer <matthewkmayer@gmail.com>", "Nikita Pekin <contact@nikitapek.in>"]
description = "AWS SDK for Rust - AWS Import/Export @ 2010-06-01"
documentation = "https://docs.rs/mz_rusoto_importexport"
keywords = ["AWS", "Amazon", "importexport"]
license = "MIT"
name = "mz_rusoto_importexport"
readme = "README.md"
repository = "https://github.com/MaterializeInc/rusoto"
version = "0.46.0"
edition = "2018"
exclude = ["test_resources/*"]
[package.metadata.docs.rs]
targets = []

[build-dependencies]

[dependencies]
async-trait = "0.1"
bytes = "0.5"
serde_urlencoded = "0.6"
xml-rs = "0.8"

[dependencies.futures]
version = "0.3"

[dependencies.mz_rusoto_core]
version = "0.46.0"
path = "../../core"
default-features = false

[dependencies.serde]
version = "1.0.2"
optional = true

[dependencies.serde_derive]
version = "1.0.2"
optional = true

[dev-dependencies]
tokio = "0.2"

[dev-dependencies.mz_rusoto_mock]
version = "0.46.0"
path = "../../../mock"
default-features = false

[features]
default = ["native-tls"]
deserialize_structs = ["bytes/serde", "serde", "serde_derive"]
native-tls = ["mz_rusoto_core/native-tls"]
rustls = ["mz_rusoto_core/rustls"]
serialize_structs = ["bytes/serde", "serde", "serde_derive"]

[lib]
name = "rusoto_importexport"
